--- a/K45EUIS_Ext/K45EUIS_Ext.csproj
+++ b/K45EUIS_Ext/K45EUIS_Ext.csproj
@@ -4,17 +4,17 @@
    	<TargetFramework>net480</TargetFramework>
    	<Configurations>Editor;Steam;Thunderstore</Configurations>
    </PropertyGroup>
-  <Target Name="PostBuild" AfterTargets="AfterBuild">
 		<ItemGroup>
       <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='Thunderstore'" />
-      <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='Thunderstore'" />
-		</ItemGroup>    
-        <ItemGroup>
-          <FilesToCopy Include="$(OutDir)\**\*.*" Exclude="$(OutDir)\**\*.pdb" />
-        </ItemGroup> 
-		<Message Text="Copy output to deploy dir @(DeployDir)" Importance="high" />
-		<Copy SourceFiles="@(FilesToCopy)" DestinationFolder="@(DeployDir)" />
-	</Target>
+      <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName);$(K45_CS2_ALLROOT)\_ThunderstoreDist\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='Thunderstore'" />
+		</ItemGroup>
+  <Target Name="PostBuild" AfterTargets="AfterBuild">
+    <ItemGroup>
+      <FilesToCopy Include="$(OutDir)\**\*.*" Exclude="$(OutDir)\**\*.pdb" />
+    </ItemGroup>
+    <Message Text="Copy output to deploy dir @(DeployDir)" Importance="high" />
+    <Copy SourceFiles="@(FilesToCopy)" DestinationFolder="%(DeployDir.Identity)" />
+  </Target>
   <ItemGroup>
     <Reference Include="Colossal.UI.Binding">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.UI.Binding.dll</HintPath>
