VOS implemented Removing VOS loader from C# Yet missing application selection for VOS Yet missing call from C# to open application in ESOS/VOS

--- a/K45EUIS_Ext/K45EUIS_Ext.csproj
+++ b/K45EUIS_Ext/K45EUIS_Ext.csproj
@@ -3,6 +3,7 @@
    <PropertyGroup>
    	<TargetFramework>net480</TargetFramework>
    	<Configurations>Editor;Steam;Thunderstore</Configurations>
+     <LangVersion>10.0</LangVersion>
    </PropertyGroup>
 		<ItemGroup>
       <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='Thunderstore'" />
