--- a/ExtraUIScreens/ExtraUIScreens.csproj
+++ b/ExtraUIScreens/ExtraUIScreens.csproj
@@ -3,16 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net480</TargetFramework>
     <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
-    <Configurations>Steam;Editor;Thunderstore</Configurations>
+    <Configurations>Steam;Editor;BepInExCs2</Configurations>
     <UnityVersion>2022.3.7f1</UnityVersion>
     <EntityVersion>1.0.16</EntityVersion>
     <RootNamespace>ExtraUIScreens</RootNamespace>
     <InstallationPath>C:\Program Files (x86)\Steam\steamapps\common\Cities Skylines II</InstallationPath>
     <DataPath>$(LOCALAPPDATA)\..\LocalLow\Colossal Order\Cities Skylines II</DataPath>
-    <ThunderstoreVersion>0.0.X</ThunderstoreVersion>
-    <PdxModsVersion>0.0.7.5</PdxModsVersion>
-    <Version Condition="'$(Configuration)'=='Thunderstore'">$(ThunderstoreVersion).65534</Version>
-    <Version Condition="'$(Configuration)'!='Thunderstore'">$(PdxModsVersion)</Version>
+    <ThunderstoreVersion>N/D</ThunderstoreVersion>
+    <PdxModsVersion>0.0.7.6</PdxModsVersion>
+    <Version>$(PdxModsVersion)</Version>
     <PublishTrimmed>True</PublishTrimmed>
     <ThunderstoreDesc>Add support to more monitors for UI in the game, also add tools to add UI applications.</ThunderstoreDesc>
     <UnityModProjectPath Condition="'$(Configuration)'=='Editor'">$(ProjectDir)..\..\UnityModsProject</UnityModProjectPath>
@@ -44,7 +43,7 @@
       <_Parameter2>$(ThunderstoreVersion)</_Parameter2>
     </AssemblyAttribute>
   </ItemGroup>
-  <Target Name="ClearReferenceCopyLocalPaths" AfterTargets="ResolveAssemblyReferences" Condition="'$(Configuration)'=='Thunderstore'">
+  <Target Name="ClearReferenceCopyLocalPaths" AfterTargets="ResolveAssemblyReferences" Condition="'$(Configuration)'=='BepInExCs2'">
     <ItemGroup>
       <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" />
     </ItemGroup>
@@ -56,14 +55,14 @@
     <EmbeddedResource Remove="Logs\**" />
     <None Remove="Logs\**" />
   </ItemGroup>
-  <PropertyGroup Condition="'$(Configuration)'=='Thunderstore'">
+  <PropertyGroup Condition="'$(Configuration)'=='BepInExCs2'">
     <RestoreAdditionalProjectSources>
       https://api.nuget.org/v3/index.json;
       https://nuget.bepinex.dev/v3/index.json;
       https://nuget.samboy.dev/v3/index.json
     </RestoreAdditionalProjectSources>
     <BepInExVersion>5</BepInExVersion>
-    <DefineConstants>$(DefineConstants);THUNDERSTORE</DefineConstants>
+    <DefineConstants>$(DefineConstants);BEPINEX_CS2</DefineConstants>
     <AssemblySearchPaths>
       $(AssemblySearchPaths);
       $(ManagedDLLPathSteam);
@@ -71,26 +70,26 @@
   </PropertyGroup>
 
 
-  <ItemGroup Condition="'$(Configuration)'=='Thunderstore'">
+  <ItemGroup Condition="'$(Configuration)'=='BepInExCs2'">
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all" />
     <PackageReference Include="HarmonyX" Version="2.10.2" PrivateAssets="all" />
   </ItemGroup>
 
 
-  <ItemGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='Thunderstore'">
+  <ItemGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='BepInExCs2'">
     <PackageReference Include="BepInEx.Unity.Mono" Version="6.0.0-be.*" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(BepInExVersion)' == '5' AND '$(Configuration)'=='Thunderstore'">
+  <ItemGroup Condition="'$(BepInExVersion)' == '5' AND '$(Configuration)'=='BepInExCs2'">
     <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all" />
   </ItemGroup>
 
-  <PropertyGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='Thunderstore'">
+  <PropertyGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='BepInExCs2'">
     <DefineConstants>$(DefineConstants);BEPINEX_V6</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="0Harmony" Condition="'$(Configuration)'!='Thunderstore'">
+    <Reference Include="0Harmony" Condition="'$(Configuration)'!='BepInExCs2'">
       <HintPath>$(K45_CS2_ALLROOT)\_commonDeps\0Harmony.dll</HintPath>
       <Private>True</Private>
     </Reference>
@@ -213,7 +212,7 @@
   </ItemGroup>
 
 
-  <ItemGroup Condition="'$(Configuration)'!='Thunderstore' and False">
+  <ItemGroup Condition="'$(Configuration)'!='BepInExCs2' and False">
     <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.SystemAPI.dll" />
     <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.dll" />
     <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.SystemAPI.QueryBuilder.dll" />
@@ -228,8 +227,8 @@
     <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.JobEntityGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='Thunderstore'" />
-    <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName);$(K45_CS2_ALLROOT)\_ThunderstoreDist\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='Thunderstore'" />
+    <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='BepInExCs2'" />
+    <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='BepInExCs2'" />
   </ItemGroup>
   <Target Name="PostBuild" AfterTargets="AfterBuild">
 
@@ -245,30 +244,7 @@
     <Message Text="Copy output to deploy dir %(DeployDir.Identity)" Importance="high" />
     <Copy SourceFiles="@(FilesToCopy)" DestinationFolder="%(DeployDir.Identity)" />
   </Target>
-  <Target Name="Tunderstore" AfterTargets="PostBuild" Condition="'$(Configuration)'=='Thunderstore'">
-
-    <ItemGroup>
-      <BasicFileTunderstoreLocation Include="$(SolutionDir)\_Thunderstore\*.*" />
-    </ItemGroup>
-    <Message Text="Copy Thunderstorm files to deploy dir @(DeployDir)" Importance="high" />
-    <Copy SourceFiles="@(BasicFileTunderstoreLocation)" DestinationFolder="%(DeployDir.Identity)" />
-
-    <PropertyGroup>
-      <ManifestContent>
-        {
-        "name": "$(RootNamespace)",
-        "version_number": "$(ThunderstoreVersion)",
-        "website_url": "",
-        "description": "$(ThunderstoreDesc)",
-        "dependencies": [
-        "BepInEx-BepInExPack-5.4.2100"
-        ]
-        }
-      </ManifestContent>
-      <ManifestLocation>$([System.IO.Path]::GetDirectoryName('%(BasicFileTunderstoreLocation.Identity)'))\manifest.json</ManifestLocation>
-    </PropertyGroup>
-
-    <WriteLinesToFile File="$(ManifestLocation)" Overwrite="true" Lines="$(ManifestContent)" />
+  <Target Name="Tunderstore" AfterTargets="PostBuild" Condition="'$(Configuration)'=='BepInExCs2'">
   </Target>
   <ItemGroup>
     <ProjectReference Include="..\K45EUIS_Ext\K45EUIS_Ext.csproj" />
@@ -323,7 +299,7 @@
       <Private>false</Private>
     </Reference>
   </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)'=='Thunderstore'">
+  <ItemGroup Condition="'$(Configuration)'=='BepInExCs2'">
     <Reference Update="Mono.Cecil*">
       <Private>false</Private>
     </Reference>
