--- a/K45EUIS_Ext/K45EUIS_Ext.csproj
+++ b/K45EUIS_Ext/K45EUIS_Ext.csproj
@@ -2,12 +2,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
    	<TargetFramework>net480</TargetFramework>
-   	<Configurations>Editor;Steam;Thunderstore</Configurations>
+   	<Configurations>Editor;Steam;BepInExCs2</Configurations>
      <LangVersion>10.0</LangVersion>
    </PropertyGroup>
 		<ItemGroup>
-      <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='Thunderstore'" />
-      <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName);$(K45_CS2_ALLROOT)\_ThunderstoreDist\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='Thunderstore'" />
+      <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='BepInExCs2'" />
+      <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName);$(K45_CS2_ALLROOT)\_ThunderstoreDist\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='BepInExCs2'" />
 		</ItemGroup>
   <Target Name="PostBuild" AfterTargets="AfterBuild">
     <ItemGroup>
