--- a/_Frontends/_Frontends.csproj
+++ b/_Frontends/_Frontends.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net480</TargetFramework>
 
     <SourceBaseFolder>$(SolutionDir)UI</SourceBaseFolder>
-    <Configurations>Editor;Steam;Thunderstore</Configurations>
+    <Configurations>Editor;Steam;BepInExCs2</Configurations>
   </PropertyGroup>
   <ItemGroup>
-    <DeployBaseFolders Condition="'$(Configuration)'!='Thunderstore'" Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)\UI" />
-    <DeployBaseFolders Condition="'$(Configuration)'=='Thunderstore'" Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName)\UI;$(K45_CS2_ALLROOT)\_ThunderstoreDist\Klyte45-$(SolutionName)\plugins\UI" />
+    <DeployBaseFolders Condition="'$(Configuration)'!='BepInExCs2'" Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)\UI" />
+    <DeployBaseFolders Condition="'$(Configuration)'=='BepInExCs2'" Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName)\UI;$(K45_CS2_ALLROOT)\_ThunderstoreDist\Klyte45-$(SolutionName)\plugins\UI" />
     <Frontend Include="$(SourceBaseFolder)\*\package.json">
       <Project>$(MSBuildProjectFullPath)</Project>
     </Frontend>
@@ -45,14 +45,26 @@
       </OutputFolder>
     </ItemGroup>
     <MSBuild Projects="%(OutputFolder.Project)" Properties="OutputFolder=%(OutputFolder.Identity);DeployBaseFolder=$(DeployBaseFolder);FrontendDir=$(FrontendDir);Environment=$(Environment)" Targets="PostBuild3" />
-    <MSBuild Projects="$(MSBuildProjectFullPath)" Properties="OutputFolder=;DeployBaseFolder=$(DeployBaseFolder);FrontendDir=$(FrontendDir);Environment=$(Environment)" Targets="PostBuild3" Condition="@(OutputFolder) == ''"/>
+    <MSBuild Projects="$(MSBuildProjectFullPath)" Properties="OutputFolder=;DeployBaseFolder=$(DeployBaseFolder);FrontendDir=$(FrontendDir);Environment=$(Environment)" Targets="PostBuild3" Condition="@(OutputFolder) == ''" />
+ 
   </Target>
 
   <Target Name="PostBuild3">
-    <ItemGroup>
+    <Message Text="Skipping project at dir $(FrontendDir)"
+            Importance="high"
+            Condition="'$(Configuration)'=='BepInExCs2' And $(FroentendDir.EndsWith('_vanillaOverlaySystem'))" 
+             />
+    <ItemGroup  Condition="'$(Configuration)'!='BepInExCs2' Or  !$(FroentendDir.EndsWith('_vanillaOverlaySystem'))" >
       <SourceFeMain Include="$(FrontendDir)\dist\**\*.*" Exclude="$(FrontendDir)\dist\**\*.map" />
-    </ItemGroup>
-    <Message Text="Building project at dir $(FrontendDir) =&gt; $(DeployBaseFolder)\$(OutputFolder)" Importance="high" />
-    <Copy SourceFiles="@(SourceFeMain)" DestinationFiles="$(DeployBaseFolder)\$(OutputFolder)\%(SourceFeMain.RecursiveDir)\%(SourceFeMain.Filename)%(SourceFeMain.Extension)" ContinueOnError="false" />
+    </ItemGroup>    
+    <Message Text="Building project at dir $(FrontendDir) =&gt; $(DeployBaseFolder)\$(OutputFolder)" 
+             Importance="high"
+              Condition="'$(Configuration)'!='BepInExCs2' Or  !$(FroentendDir.EndsWith('_vanillaOverlaySystem'))" 
+            />
+    <Copy SourceFiles="@(SourceFeMain)" 
+          DestinationFiles="$(DeployBaseFolder)\$(OutputFolder)\%(SourceFeMain.RecursiveDir)\%(SourceFeMain.Filename)%(SourceFeMain.Extension)" 
+          ContinueOnError="false"
+           Condition="'$(Configuration)'!='BepInExCs2' Or  !$(FroentendDir.EndsWith('_vanillaOverlaySystem'))" 
+          />
   </Target>
 </Project>
