--- a/ExtraUIScreens/ExtraUIScreens.csproj
+++ b/ExtraUIScreens/ExtraUIScreens.csproj
@@ -1,102 +1,67 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net480</TargetFramework>
-    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
-    <Configurations>Steam;Editor;BepInExCs2</Configurations>
-    <UnityVersion>2022.3.7f1</UnityVersion>
-    <EntityVersion>1.0.16</EntityVersion>
-    <RootNamespace>ExtraUIScreens</RootNamespace>
-    <InstallationPath>C:\Program Files (x86)\Steam\steamapps\common\Cities Skylines II</InstallationPath>
-    <DataPath>$(LOCALAPPDATA)\..\LocalLow\Colossal Order\Cities Skylines II</DataPath>
-    <ThunderstoreVersion>N/D</ThunderstoreVersion>
-    <PdxModsVersion>0.0.7.6</PdxModsVersion>
-    <Version>$(PdxModsVersion)</Version>
-    <PublishTrimmed>True</PublishTrimmed>
-    <ThunderstoreDesc>Add support to more monitors for UI in the game, also add tools to add UI applications.</ThunderstoreDesc>
-    <UnityModProjectPath Condition="'$(Configuration)'=='Editor'">$(ProjectDir)..\..\UnityModsProject</UnityModProjectPath>
-    <UnityModProjectPath Condition="'$(Configuration)'=='Steam'">$(DataPath)\~Tooling~\UnityModsProject</UnityModProjectPath>
-
-    <ModPostProcessorPath Condition="'$(Configuration)'=='Editor'">$(ProjectDir)..\..\..\..\BeverlyHills\Assets\StreamingAssets\~Tooling~\ModPostProcessor\ModPostProcessor.exe</ModPostProcessorPath>
-    <ModPostProcessorPath Condition="'$(Configuration)'=='Steam'">$(InstallationPath)\Cities2_Data\StreamingAssets\~Tooling~\ModPostProcessor\ModPostProcessor.exe</ModPostProcessorPath>
-
-
-    <ManagedDLLPathEditor>..\..\..\..\BeverlyHills\Library\ScriptAssemblies</ManagedDLLPathEditor>
-    <ManagedDLLPathSteam>$(K45_CS2_ALLROOT)\_Managed DLLs</ManagedDLLPathSteam>
-    <UnityEnginePath>C:\Program Files\Unity\Hub\Editor\$(UnityVersion)\Editor\Data\Managed\UnityEngine</UnityEnginePath>
-
-    <AssemblySearchPaths Condition="'$(Configuration)'=='Editor'">
-      $(AssemblySearchPaths);
-      $(ManagedDLLPathEditor);
-      $(UnityEnginePath);
-    </AssemblySearchPaths>
-    <AssemblySearchPaths Condition="'$(Configuration)'=='Steam'">
-      $(AssemblySearchPaths);
-      $(ManagedDLLPathSteam);
-    </AssemblySearchPaths>
+    <OutputType>Library</OutputType>
+    <TargetFramework>net472</TargetFramework>
+    <Configurations>Debug;Release</Configurations>
     <LangVersion>10.0</LangVersion>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-  </PropertyGroup>
-  <ItemGroup>
-    <AssemblyAttribute Include="Belzont.AssemblyUtility.KlyteModCanonVersionAttribute">
-      <_Parameter1>$(PdxModsVersion)</_Parameter1>
-      <_Parameter2>$(ThunderstoreVersion)</_Parameter2>
-    </AssemblyAttribute>
-  </ItemGroup>
-  <Target Name="ClearReferenceCopyLocalPaths" AfterTargets="ResolveAssemblyReferences" Condition="'$(Configuration)'=='BepInExCs2'">
-    <ItemGroup>
-      <ReferenceCopyLocalPaths Remove="@(ReferenceCopyLocalPaths)" />
-    </ItemGroup>
-  </Target>
+    <!--The folder where Cities2.exe is located. Set it only if the game is not installed in the default location, otherwise keep it empty-->
+    <CustomInstallationPath></CustomInstallationPath>
 
+    <!--Path to the text file where PDX account data is stored which is required to publish the mod-->
+    <!--Keep it outside of project in order to not commit it or share accidentally-->
+    <!--The file should contain 2 lines:-->
+    <!--Your.PDX@Account.login-->
+    <!--Your-PDX-Account-Pa$$word-->
+    <PDXAccountDataPath>$(K45_CS2_OFFICIALROOT)\pdx_account.txt</PDXAccountDataPath>
 
-  <ItemGroup>
-    <Compile Remove="Logs\**" />
-    <EmbeddedResource Remove="Logs\**" />
-    <None Remove="Logs\**" />
-  </ItemGroup>
-  <PropertyGroup Condition="'$(Configuration)'=='BepInExCs2'">
-    <RestoreAdditionalProjectSources>
-      https://api.nuget.org/v3/index.json;
-      https://nuget.bepinex.dev/v3/index.json;
-      https://nuget.samboy.dev/v3/index.json
-    </RestoreAdditionalProjectSources>
-    <BepInExVersion>5</BepInExVersion>
-    <DefineConstants>$(DefineConstants);BEPINEX_CS2</DefineConstants>
-    <AssemblySearchPaths>
-      $(AssemblySearchPaths);
-      $(ManagedDLLPathSteam);
-    </AssemblySearchPaths>
+    <!--The file where mod information which is required for publishing mod on PDX mods are stored-->
+    <PublishConfigurationPath>Properties\PublishConfiguration.xml</PublishConfigurationPath>
   </PropertyGroup>
 
+  <!--Imports must be after PropertyGroup block-->
+  <Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.props" />
+  <Import Project="$([System.Environment]::GetEnvironmentVariable('CSII_TOOLPATH', 'EnvironmentVariableTarget.User'))\Mod.targets" />
 
-  <ItemGroup Condition="'$(Configuration)'=='BepInExCs2'">
-    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" PrivateAssets="all" />
-    <PackageReference Include="HarmonyX" Version="2.10.2" PrivateAssets="all" />
-  </ItemGroup>
-
-
-  <ItemGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='BepInExCs2'">
-    <PackageReference Include="BepInEx.Unity.Mono" Version="6.0.0-be.*" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(BepInExVersion)' == '5' AND '$(Configuration)'=='BepInExCs2'">
-    <PackageReference Include="BepInEx.Core" Version="5.*" PrivateAssets="all" />
-  </ItemGroup>
-
-  <PropertyGroup Condition="'$(BepInExVersion)' == '6' AND '$(Configuration)'=='BepInExCs2'">
-    <DefineConstants>$(DefineConstants);BEPINEX_V6</DefineConstants>
-  </PropertyGroup>
+  <Target Name="RunModPostProcessor" AfterTargets="AfterBuild" Condition="false" />
+  
   <ItemGroup>
-    <Reference Include="0Harmony" Condition="'$(Configuration)'!='BepInExCs2'">
-      <HintPath>$(K45_CS2_ALLROOT)\_commonDeps\0Harmony.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Game">
+      <Private>false</Private>
     </Reference>
-    <Reference Include="UnityEngine.ImageConversionModule.dll">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.ImageConversionModule.dll.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Colossal.Core">
+      <Private>false</Private>
     </Reference>
+    <Reference Include="Colossal.Logging">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Colossal.UI">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Colossal.UI.Binding">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Colossal.Localization">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Colossal.IO.AssetDatabase">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="UnityEngine.CoreModule">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Unity.Burst">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Unity.Collections">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Unity.Entities">
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="Unity.Mathematics">
+      <Private>false</Private>
+    </Reference>  
     <Reference Include="cohtml.Net">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\cohtml.Net.dll</HintPath>
       <Private>False</Private>
@@ -105,213 +70,69 @@
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Cohtml.Runtime.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Colossal.Collections">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.Collections.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Colossal.Core">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Colossal.IO.AssetDatabase">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.IO.AssetDatabase.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Colossal.Localization">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.Localization.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Colossal.Logging">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.Logging.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Colossal.Mathematics">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.Mathematics.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="Colossal.OdinSerializer">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.OdinSerializer.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Colossal.UI">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.UI.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Colossal.UI.Binding">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.UI.Binding.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Game">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Game.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\System.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Xml">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\System.Xml.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="mscorlib">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\mscorlib.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\System.Xml.Linq.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Collections">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Unity.Collections.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Entities">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Unity.Entities.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Mathematics">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Unity.Mathematics.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.HighDefinition.Runtime">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Unity.RenderPipelines.HighDefinition.Runtime.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.CoreModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.InputLegacyModule.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Unity.Burst">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Unity.Burst.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine.ScreenCaptureModule">
-      <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Cities Skylines II\Cities2_Data\Managed\UnityEngine.ScreenCaptureModule.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UnityWebRequestModule">
-      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.UnityWebRequestModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Colossal.AssetPipeline">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.AssetPipeline.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.InputLegacyModule">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.InputLegacyModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Colossal.Mono.Cecil">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.Mono.Cecil.dll</HintPath>
       <Private>False</Private>
     </Reference>
-
+    <Reference Include="UnityEngine.ScreenCaptureModule">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\UnityEngine.ScreenCaptureModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
 
-
-  <ItemGroup Condition="'$(Configuration)'!='BepInExCs2' and False">
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.SystemAPI.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.SystemAPI.QueryBuilder.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.Analyzer.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.LambdaJobs.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.Common.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.SystemAPI.Query.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.Analyzer.CodeFixes.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.AspectGenerator.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.Common.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.SystemGenerator.EntityQueryBulkOperations.dll" />
-    <Analyzer Include="$(UnityModProjectPath)\Library\PackageCache\com.unity.entities@$(EntityVersion)\Unity.Entities\SourceGenerators\Unity.Entities.SourceGen.JobEntityGenerator.dll" />
-  </ItemGroup>
   <ItemGroup>
-    <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='BepInExCs2'" />
-    <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='BepInExCs2'" />
+    <Reference Include="System">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\System.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Update="System.Core">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\System.Core.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Update="System.Data">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\System.Data.dll</HintPath>
+      <Private>false</Private>
+    </Reference>
+    <Reference Include="mscorlib">
+      <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\mscorlib.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
-  <Target Name="PostBuild" AfterTargets="AfterBuild">
 
-
-    <ItemGroup>
-      <FilesToCopy Include="$(OutDir)\**\*.*" Exclude="$(OutDir)\**\*.pdb" /> 
-    </ItemGroup>
-
-    <!--<Message Condition="Exists('$(ModPostProcessorPath)')" Text="Run post processor: $(ModPostProcessorPath) $(TargetPath) $(ProjectPath) $(UnityModProjectPath)" Importance="high" />
-		    <Message Condition="!Exists('$(ModPostProcessorPath)')" Text="Post processor was not found, please check the path: $(ModPostProcessorPath)" Importance="high" />
-		    <Exec Condition="Exists('$(ModPostProcessorPath)')" Command="&quot;$(ModPostProcessorPath)&quot; PostProcess &quot;$(TargetPath)&quot; -p &quot;$(ProjectPath)&quot; -r &quot;$(UnityModProjectPath)&quot; -t Windows -t macOS -t Linux -b $(Configuration) -d -v"></Exec>-->
-
-    <Message Text="Copy output to deploy dir %(DeployDir.Identity)" Importance="high" />
-    <Copy SourceFiles="@(FilesToCopy)" DestinationFolder="%(DeployDir.Identity)" />
-  </Target>
-  <Target Name="Tunderstore" AfterTargets="PostBuild" Condition="'$(Configuration)'=='BepInExCs2'">
-  </Target>
   <ItemGroup>
-    <ProjectReference Include="..\K45EUIS_Ext\K45EUIS_Ext.csproj" />
+    <None Include="$(ModPropsFile)" Link="Properties\Mod.props" />
+    <None Include="$(ModTargetsFile)" Link="Properties\Mod.targets" />
   </ItemGroup>
+
   <ItemGroup>
+    <PackageReference Include="Lib.Harmony" Version="2.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\K45EUIS_Ext\K45EUIS_Ext.csproj">
+      <CopyLocalSatelliteAssemblies>True</CopyLocalSatelliteAssemblies>
+    </ProjectReference>
+    <ProjectReference Include="..\_Frontends\_Frontends.csproj">
+      <Private>False</Private>
+    </ProjectReference>
+    <Content Include="..\_Frontends\bin\$(Configuration)\$(TargetFramework)\*\**\*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory> 
+    </Content>
     <None Update="i18n\i18n.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.Core">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.Data">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.Drawing">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.IO.Compression.FileSystem">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.Numerics">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.Runtime.Serialization">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.Xml">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Update="System.Xml.Linq">
-      <Private>false</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)'=='BepInExCs2'">
-    <Reference Update="Mono.Cecil*">
-      <Private>false</Private>
-    </Reference>
-    <Reference Update="Mono.Cecil.*">
-      <Private>false</Private>
-    </Reference>
-    <Reference Update="MonoMod.*">
-      <Private>false</Private>
-    </Reference>
-    <Reference Update="0Harmony*">
-      <Private>false</Private>
-    </Reference>
   </ItemGroup>
 
 </Project>
