--- a/K45EUIS_Ext/K45EUIS_Ext.csproj
+++ b/K45EUIS_Ext/K45EUIS_Ext.csproj
@@ -1,21 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
    <PropertyGroup>
-   	<TargetFramework>net480</TargetFramework>
-   	<Configurations>Editor;Steam;BepInExCs2</Configurations>
+   	<TargetFramework>net472</TargetFramework>
+   	<Configurations>Debug;Release</Configurations>
      <LangVersion>10.0</LangVersion>
    </PropertyGroup>
 		<ItemGroup>
       <DeployDir Include="$(K45_CS2_ALLROOT)\_appdataMods\$(SolutionName)" Condition="'$(Configuration)'!='BepInExCs2'" />
       <DeployDir Include="$(K45_CS2_ALLROOT)\_ThunderstoreOutput\Klyte45-$(SolutionName);$(K45_CS2_ALLROOT)\_ThunderstoreDist\Klyte45-$(SolutionName)" Condition="'$(Configuration)'=='BepInExCs2'" />
 		</ItemGroup>
-  <Target Name="PostBuild" AfterTargets="AfterBuild">
-    <ItemGroup>
-      <FilesToCopy Include="$(OutDir)\**\*.*" Exclude="$(OutDir)\**\*.pdb" />
-    </ItemGroup>
-    <Message Text="Copy output to deploy dir @(DeployDir)" Importance="high" />
-    <Copy SourceFiles="@(FilesToCopy)" DestinationFolder="%(DeployDir.Identity)" />
-  </Target>
+  
   <ItemGroup>
     <Reference Include="Colossal.UI.Binding">
       <HintPath>$(K45_CS2_ALLROOT)\_Managed DLLs\Colossal.UI.Binding.dll</HintPath>
