--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ExtraUIScreens/BelzontCommons"]
 	path = ExtraUIScreens/BelzontCommons
 	url = ../BelzontCommons
-[submodule "UI/_replacements"]
-	path = UI/_replacements
+[submodule "_Frontends/UI/_replacements"]
+	path = _Frontends/UI/_replacements
 	url = ../Cs2UIUtility
