--- a/_Frontends/_Frontends.csproj
+++ b/_Frontends/_Frontends.csproj
@@ -1,69 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net472</TargetFramework>
-
-    <SourceBaseFolder>$(SolutionDir)UI</SourceBaseFolder>
-    <Configurations>Debug;Release</Configurations>
-  </PropertyGroup>
-  <ItemGroup>
-    <DeployBaseFolders Condition="'$(Configuration)'!='BepInExCs2'" Include="$(OutputPath)\UI" />
-    <Frontend Include="$(SourceBaseFolder)\*\package.json">
-      <Project>$(MSBuildProjectFullPath)</Project>
-    </Frontend>
-    <Images Include="$(SourceBaseFolder)\images\**\*.*" />
-  </ItemGroup>
-  <Target Name="CleanUI" BeforeTargets="BeforeBuild">
-    <RemoveDir Directories="@(DeployBaseFolders)" />
-    <Copy SourceFiles="@(Images)" DestinationFolder="%(DeployBaseFolders.Identity)\images" ContinueOnError="false" />
-  </Target>
-
-  <Target AfterTargets="AfterBuild" Name="IterateFrontends" Inputs="@(Frontend)" Outputs="%(Identity).bogus">
-    <MSBuild Projects="%(Frontend.Project)" Properties="FrontendDir=$([System.IO.Path]::GetDirectoryName('%(Frontend.Identity)'));Environment=$(Environment)" Targets="PostBuild1" />
-  </Target>
-  <Target Name="PostBuild1">
-
-    <Message Text="Building project at dir $(FrontendDir)" Importance="high" />
-    <Exec WorkingDirectory="$(FrontendDir)" Command="npm run build:webpack" ContinueOnError="false" />
-
-    <ItemGroup>
-      <DeployBaseFolder Include="@(DeployBaseFolders)">
-        <Project>$(MSBuildProjectFullPath)</Project>
-      </DeployBaseFolder>
-    </ItemGroup>
-    <MSBuild Projects="%(DeployBaseFolder.Project)" Properties="DeployBaseFolder=%(DeployBaseFolder.Identity);FrontendDir=$(FrontendDir);Environment=$(Environment)" Targets="PostBuild2" />
-  </Target>
-
-  <Target Name="PostBuild2">
-    <ReadLinesFromFile File="$(FrontendDir)\outputFolder.txt">
-      <Output TaskParameter="Lines" ItemName="OutputFolder" />
-    </ReadLinesFromFile>
-    <ItemGroup>
-      <OutputFolder Include="@(OutputFolder)">
-        <Project>$(MSBuildProjectFullPath)</Project>
-      </OutputFolder>
-    </ItemGroup>
-    <MSBuild Projects="%(OutputFolder.Project)" Properties="OutputFolder=%(OutputFolder.Identity);DeployBaseFolder=$(DeployBaseFolder);FrontendDir=$(FrontendDir);Environment=$(Environment)" Targets="PostBuild3" />
-    <MSBuild Projects="$(MSBuildProjectFullPath)" Properties="OutputFolder=;DeployBaseFolder=$(DeployBaseFolder);FrontendDir=$(FrontendDir);Environment=$(Environment)" Targets="PostBuild3" Condition="@(OutputFolder) == ''" />
- 
-  </Target>
-
-  <Target Name="PostBuild3">
-    <Message Text="Skipping project at dir $(FrontendDir)"
-            Importance="high"
-            Condition="'$(Configuration)'=='BepInExCs2' And $(FroentendDir.EndsWith('_vanillaOverlaySystem'))" 
-             />
-    <ItemGroup  Condition="'$(Configuration)'!='BepInExCs2' Or  !$(FroentendDir.EndsWith('_vanillaOverlaySystem'))" >
-      <SourceFeMain Include="$(FrontendDir)\dist\**\*.*" Exclude="$(FrontendDir)\dist\**\*.map" />
-    </ItemGroup>    
-    <Message Text="Building project at dir $(FrontendDir) =&gt; $(DeployBaseFolder)\$(OutputFolder)" 
-             Importance="high"
-              Condition="'$(Configuration)'!='BepInExCs2' Or  !$(FroentendDir.EndsWith('_vanillaOverlaySystem'))" 
-            />
-    <Copy SourceFiles="@(SourceFeMain)" 
-          DestinationFiles="$(DeployBaseFolder)\$(OutputFolder)\%(SourceFeMain.RecursiveDir)\%(SourceFeMain.Filename)%(SourceFeMain.Extension)" 
-          ContinueOnError="false"
-           Condition="'$(Configuration)'!='BepInExCs2' Or  !$(FroentendDir.EndsWith('_vanillaOverlaySystem'))" 
-          />
-  </Target>
+  <Import Project="$(K45_CS2_ALLROOT)\_commonCsproj\Frontend.targets" />
 </Project>
