--- a/_Frontends/UI/root/package.json
+++ b/_Frontends/UI/root/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@k45-euis/root",
   "scripts": {
-    "start": "webpack serve --port 8400",
+    "start": "webpack serve --port 8400 --env isLocal",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently npm:build:*",
     "build:webpack": "webpack --mode=production",
@@ -22,9 +22,6 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.15.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@types/testing-library__jest-dom": "^5.14.1",
     "babel-jest": "^27.0.6",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
@@ -38,7 +35,7 @@
     "jest-cli": "^27.0.6",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
-    "sass": "^1.69.5",
+    "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "ts-config-single-spa": "^3.0.0",
     "typescript": "^4.3.5",
@@ -51,19 +48,21 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@emotion/cache": "file:../_replacements/cache-11.11.0-k45.tgz",
+    "@klyte45/adr-commons": "file:../_shared/adr-commons/",
+    "@klyte45/euis-components": "file:../_replacements/euis-components/",
     "@types/jest": "^27.0.1",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
-    "coherent-gameface-scrollable-container": "^3.1.0",
     "mini-css-extract-plugin": "^2.7.6",
     "object-typed": "^1.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.9",
+    "react-dom": "^18.0.9",
+    "react-select": "file:../_replacements/react-select-5.7.3-k45.tgz",
+    "react-tabs": "^4.3.0",
     "single-spa": "^5.9.3",
     "single-spa-react": "^4.3.1",
-    "@klyte45/euis-components": "file:../_replacements/euis-components/"
-  },
-  "types": "dist/k45-euis-root.d.ts"
+    "systemjs-webpack-interop": "file:../_replacements/systemjs-webpack-interop-2.3.7-euis.tgz",
+    "tsconfig-paths-webpack-plugin": "^4.1.0"
+  }
 }
